# autofcholv

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
docs/: RADMAP.md
examples/: simple_usage.py
src/autofcholv/: __init__.py  cli.py  core.py
src/autofcholv/config/: config.py
src/autofcholv/pipeline/: README.md  feature_engineering.old.py  feature_engineering.py  preprocessing.py  validation.py
src/autofcholv/pipeline/features/: README.md  candlestick.json  candlestick.py  close.json  close.py  group.json  group.py  lag.json  lag.py  mix.json  mix.py  money.json  money.py  resample.json  resample.py  signal.json  signal.py  time.json  time.py  volume.json  volume.py
src/autofcholv/utils/: timing.py
tests/: conftest.py  test_cli.py  test_core.py
